moved course title h4 into its own div.  when collapsing the course, just the div containing the sections is hidden.  this solves #26.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -155,6 +155,10 @@
   border: 1px solid #ccc;
   margin-bottom: 15px;
 
+  .title {
+    padding: 0 10px;
+  }
+
   .inner {
     padding: 0 10px 10px;
     overflow: hidden;
@@ -256,10 +260,6 @@
 }
 .course.show-false {
   border-left-width: 10px;
-}
-.course.show-false .inner {
-  height: 35px;
-  overflow: hidden;
 }
 
 
